# libgls

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  api.yaml  play.cpp  readme.md
.github/workflows/: tests-run.yaml
lib/: CMakeLists.txt
lib/include/gls/: all.hpp  auth.hpp  calculation.hpp  cargo.hpp  contianer.hpp  date_time.hpp  project.hpp
lib/include/gls/models/: advantage.hpp  auth_token.hpp  axes.hpp  calculation.hpp  calculation_cargoes.hpp  calculation_create.hpp  calculation_designed_create.hpp  calculation_last_calc_response.hpp  calculation_report_list.hpp  calculation_report_page.hpp  calculation_update.hpp  calculation_with_project_create.hpp  cargo.hpp  cargo_designed.hpp  cargo_space.hpp  cargo_space_list_enum.hpp  cargo_space_report_info.hpp  cargo_space_report_short_info.hpp  cargo_space_report_short_info_type_report_enum.hpp  cargo_space_response.hpp  cargo_space_sample.hpp  cargo_space_type_enum.hpp  container.hpp  container_response.hpp  container_response_typed.hpp  create_user.hpp  email_pre_confirm_check_code.hpp  email_pre_confirm_send.hpp  feedback.hpp  file_type_enum.hpp  form_type_enum.hpp  full_report_pivot.hpp  group.hpp  group_designed.hpp  history_calculation.hpp  input_cargo.hpp  input_data.hpp  input_data_designed.hpp  paginated_calculation_list.hpp  paginated_cargo_list.hpp  (+22 more)
lib/src/: auth.cpp  calculation.cpp  cargo.cpp  container.cpp  project.cpp
tests/: CMakeLists.txt  auth.cpp  auth_test.cpp  calculation.hpp  calculation_test.cpp  cargo_test.cpp  container.hpp  container_test.cpp  enum_json_test.cpp  project.hpp  project_test.cpp  test.cpp
